Add stuff for peatio v2

--- a/config/barong.env.erb
+++ b/config/barong.env.erb
@@ -1,13 +1,13 @@
 PORT=8001
 
-API_CORS_ORIGINS=http://api.wb.local
+API_CORS_ORIGINS=http://www.wb.local
 API_CORS_ALLOW_CREDENTIALS=true
 
 ROOT_DOMAIN=wb.local
 
 LOG_LEVEL=debug
 
-RAILS_ENV=development
+RAILS_ENV=production
 
 SMTP_ADDRESS=mailcatcher
 SMTP_PORT=1025
