--- a/config/peatio.env.erb
+++ b/config/peatio.env.erb
@@ -1,12 +1,12 @@
-RAILS_ENV=development
+RAILS_ENV=production
 RAILS_ROOT=/home/app
 
 PORT=8000
-URL_HOST=api.wb.local
+URL_HOST=www.wb.local
 
 LOG_LEVEL=debug
 
-ADMIN=admin@barong.io,philliparuais@gmail.com
+ADMIN=admin@barong.io
 
 DATABASE_HOST=db
 DATABASE_USER=root
