Add the secret key base and disable SSL enforcement for Peatio

--- a/config/peatio.env.erb
+++ b/config/peatio.env.erb
@@ -49,3 +49,6 @@ EVENT_API_RABBITMQ_PASSWORD=guest
 MINIMUM_MEMBER_LEVEL_FOR_DEPOSIT=3
 MINIMUM_MEMBER_LEVEL_FOR_WITHDRAW=3
 MINIMUM_MEMBER_LEVEL_FOR_TRADING=3
+
+SECRET_KEY_BASE=faiba2shei0Ae5gahCh4aipoh3meyaFi
+FORCE_SECURE_CONNECTION="false"
