--- a/config/barong.env.erb
+++ b/config/barong.env.erb
@@ -1,29 +1,21 @@
 PORT=8001
 
-API_CORS_ORIGINS=http://www.wb.local
-API_CORS_ALLOW_CREDENTIALS=true
-
-ROOT_DOMAIN=wb.local
-
 LOG_LEVEL=debug
 
-RAILS_ENV=production
+DISABLE_SPRING=true
 
-SMTP_ADDRESS=mailcatcher
-SMTP_PORT=1025
-SMTP_URL_ADDRESS=auth.wb.local
+RAILS_ENV=development
 
 DATABASE_HOST=db
 DATABASE_USER=root
-DATABASE_PASSWORD=changeme
+DATABASE_PASS=changeme
 
-VAULT_TOKEN=changeme
-VAULT_ADDR=http://vault:8200
+JWT_PUBLIC_KEY=<%= @jwt_public_key %>
+JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 
-TWILIO_ACCOUNT_SID=changeme
-TWILIO_AUTH_TOKEN=changeme
-TWILIO_PHONE_NUMBER=changeme
-
-SEEDS_FILE=/opt/barong/config/seeds.yml
-
-JWT_SHARED_SECRET_KEY=<%= @jwt_private_key %>
+EVENT_API_JWT_PRIVATE_KEY=<%= @jwt_private_key %>
+EVENT_API_JWT_ALGORITHM=RS256
+EVENT_API_RABBITMQ_HOST=rabbitmq
+EVENT_API_RABBITMQ_PORT=5672
+EVENT_API_RABBITMQ_USERNAME=guest
+EVENT_API_RABBITMQ_PASSWORD=guest
