Fixing admin panel link

--- a/templates/gateway/mapping.yaml.erb
+++ b/templates/gateway/mapping.yaml.erb
@@ -18,7 +18,15 @@ service: barong:8001
 apiVersion: ambassador/v0
 kind: Mapping
 name: peatio_app_mapping
-host: peatio.<%= CONFIG['app']['domain'] %>
-prefix: /
-rewrite: /
+host: www.<%= CONFIG['app']['domain'] %>
+prefix: /admin
+rewrite: /admin
+service: peatio:8000
+---
+apiVersion: ambassador/v0
+kind: Mapping
+name: peatio_assets_mapping
+host: www.<%= CONFIG['app']['domain'] %>
+prefix: /assets
+rewrite: /assets
 service: peatio:8000
