--- a/templates/peatio.env.erb
+++ b/templates/peatio.env.erb
@@ -2,7 +2,7 @@ RAILS_ENV=production
 RAILS_ROOT=/home/app
 
 PORT=8000
-URL_HOST=www.wb.local
+URL_HOST=www.app.local
 
 LOG_LEVEL=debug
 
@@ -18,19 +18,6 @@ RABBITMQ_HOST=rabbitmq
 
 RANGER_HOST=ws.ranger.wb.local
 RANGER_PORT=80
-
-SMTP_PORT=25
-SMTP_DOMAIN=helioscloud.com
-SMTP_ADDRESS=smtp_relay
-SMTP_USE_SSL="false"
-SMTP_USE_TLS="false"
-SMTP_ENABLE_STARTTLS="false"
-SMTP_ENABLE_STARTTLS_AUTO="false"
-
-OAUTH2_SIGN_IN_PROVIDER=barong
-BARONG_DOMAIN=http://auth.wb.local
-BARONG_CLIENT_ID=a68be319fca51caca60eed5711226e568bd1c1d13ff452b945515f1a6ffbaca4
-BARONG_CLIENT_SECRET=ab80e2c843861c4d23e63f5472cd1c9ee6f55e388863e21f22b03a9093977f29
 
 MARKETS_CONFIG=/opt/peatio/config/seed/markets.yml
 CURRENCIES_CONFIG=/opt/peatio/config/seed/currencies.yml
