--- a/templates/compose/frontend.yaml.erb
+++ b/templates/compose/frontend.yaml.erb
@@ -2,20 +2,20 @@ version: '3.6'
 
 services:
   frontend:
-    image: "rubykube/mikroapp:0.1.5"
+    image: "<%= CONFIG['images']['frontend'] %>"
     volumes:
       - ../config/frontend/env.js:/home/node/public/env.js
     labels:
       traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/;Host:www.app.local"
+      traefik.frontend.rule: "PathPrefix:/;Host:www.<%= CONFIG['app']['domain'] %>"
       traefik.port: 3000
 
   tower:
-    image: "rubykube/tower:0.1.1"
+    image: "<%= CONFIG['images']['tower'] %>"
     volumes:
       - ../config/frontend/tower.js:/home/app/env.js
     labels:
       traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/tower;Host:www.app.local"
+      traefik.frontend.rule: "PathPrefix:/tower;Host:www.<%= CONFIG['app']['domain'] %>"
       traefik.port: 8080
 
