--- a/templates/compose/utils.yaml.erb
+++ b/templates/compose/utils.yaml.erb
@@ -5,5 +5,5 @@ services:
     image: schickling/mailcatcher
     labels:
       traefik.enable: true
-      traefik.frontend.rule: 'Host: mail.app.local'
+      traefik.frontend.rule: 'Host: mail.<%= CONFIG['app']['domain'] %>'
       traefik.port: 1080
