--- a/templates/compose/gateway.yaml.erb
+++ b/templates/compose/gateway.yaml.erb
@@ -12,5 +12,5 @@ services:
       - '8877:8877'
     labels:
       traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/api/, /admin, /assets/;Host:www.${APP_DOMAIN}"
+      traefik.frontend.rule: "PathPrefix:/api/, /admin, /assets/;Host:www.<%= CONFIG['app']['domain'] %>"
       traefik.port: 80
