--- a/templates/config/gateway/mapping.yaml.erb
+++ b/templates/config/gateway/mapping.yaml.erb
@@ -2,7 +2,7 @@
 apiVersion: ambassador/v1
 kind: Mapping
 name: peatio_api_mapping
-host: www.<%= CONFIG['app']['domain'] %>
+host: www.<%= @config['app']['domain'] %>
 prefix: /api/v2/peatio
 rewrite: /api/v2/
 service: peatio:8000
@@ -10,7 +10,7 @@ service: peatio:8000
 apiVersion: ambassador/v1
 kind: Mapping
 name: barong_api_mapping
-host: www.<%= CONFIG['app']['domain'] %>
+host: www.<%= @config['app']['domain'] %>
 prefix: /api/v2/barong
 rewrite: /api/v2/
 service: barong:8001
@@ -18,7 +18,7 @@ service: barong:8001
 apiVersion: ambassador/v1
 kind: Mapping
 name: peatio_app_mapping
-host: www.<%= CONFIG['app']['domain'] %>
+host: www.<%= @config['app']['domain'] %>
 prefix: /admin
 rewrite: /admin
 service: peatio:8000
@@ -26,7 +26,7 @@ service: peatio:8000
 apiVersion: ambassador/v1
 kind: Mapping
 name: peatio_assets_mapping
-host: www.<%= CONFIG['app']['domain'] %>
+host: www.<%= @config['app']['domain'] %>
 prefix: /assets
 rewrite: /assets
 service: peatio:8000
