Rename Pigeon to Postmaster (#53)
* Add support for pigeon

* Rename pigeon to postmaster

--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -86,3 +86,11 @@ services:
       traefik.frontend.rule: 'Host: ranger.<%= @config['app']['domain'] %>'
       traefik.port: 8080
     command: bash -c "bundle exec peatio service start ranger"
+
+  postmaster:
+    image: "<%= @config['images']['postmaster'] %>"
+    depends_on:
+      - rabbitmq
+    env_file:
+      - ../config/postmaster.env
+
