--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -1,3 +1,9 @@
 window.env = {
-  API_URL: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>'
+    api: {
+      gatewayUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2',
+      rangerUrl: 'ws://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger',
+    },
+    minutesUntilAutoLogout: '5',
+    withCredentials: false,
+    siteKey: "<%= @config['recaptcha']['siteKey'] %>",
 };
