--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -21,6 +21,9 @@ STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
 STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
 
+RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
+RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
+
 JWT_PUBLIC_KEY=<%= @jwt_public_key %>
 JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 
