Implement support for private git repos
- Start using openware/microkube instead of rubykube in install.sh

--- a/templates/terraform/terraform.tfvars.erb
+++ b/templates/terraform/terraform.tfvars.erb
@@ -1,4 +1,5 @@
 credentials = "<%= @config['terraform']['credentials'] %>"
+git_key = "<%= @config['terraform']['git_key'] %>"
 project = "<%= @config['terraform']['project'] %>"
 region = "<%= @config['terraform']['region'] %>"
 zone = "<%= @config['terraform']['zone'] %>"
