Update config for baseapp

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -5,5 +5,8 @@ window.env = {
     },
     minutesUntilAutoLogout: '5',
     withCredentials: false,
-    siteKey: "<%= @config['recaptcha']['siteKey'] %>",
+    captcha: {
+        captchaType: '<%= @config['recaptcha']['type'] %>',
+        siteKey: '<%= @config['recaptcha']['siteKey'] %>',
+    },
 };
