--- a/templates/compose/cryptonodes.yaml.erb
+++ b/templates/compose/cryptonodes.yaml.erb
@@ -19,6 +19,8 @@ services:
     expose:
       - "8545"
       - "30303"
+    ports:
+      - "8545:8545"
     labels:
       traefik.enable: true
       traefik.frontend.rule: 'Host: eth.<%= @config['app']['domain'] %>'
