--- a/templates/config/peatio/seed/markets.yml.erb
+++ b/templates/config/peatio/seed/markets.yml.erb
@@ -12,6 +12,20 @@
   position:       1
   enabled:        true
 
+- id:             fthusd
+  ask_unit:       fth
+  bid_unit:       usd
+  ask_fee:        0.0015
+  bid_fee:        0.0015
+  min_ask_price:  0.0
+  max_bid_price:  0.0
+  min_ask_amount: 0.0
+  min_bid_amount: 0.0
+  ask_precision:  2
+  bid_precision:  2
+  position:       2
+  enabled:        true
+
 - id:             trsteth
   ask_unit:       trst
   bid_unit:       eth
@@ -23,20 +37,5 @@
   min_bid_amount: 0.0
   ask_precision:  4
   bid_precision:  4
-  position:       2
-  enabled:        true
-
-- id:            kyneth
-  ask_unit:      kyn
-  bid_unit:      eth
-  ask_fee:        0.0015
-  bid_fee:        0.0015
-  min_ask_price:  0.0
-  max_bid_price:  0.0
-  min_ask_amount: 0.0
-  min_bid_amount: 0.0
-  ask_precision:  4
-  bid_precision:  4
   position:       3
   enabled:        true
-
