Switch to Postmaster 0.0.6 and SMTP

--- a/templates/config/postmaster.env.erb
+++ b/templates/config/postmaster.env.erb
@@ -3,12 +3,15 @@ RABBITMQ_PORT=5672
 RABBITMQ_USERNAME=guest
 RABBITMQ_PASSWORD=guest
 
-SENDER_NAME=Microkube
-SENDER_EMAIL=noreply@microkube.com
+SENDER_NAME=<%= @config['smtp']['sender_name'] %>
+SENDER_EMAIL=<%= @config['smtp']['sender_email'] %>
 
 CONFIRM_URL=http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/accounts/confirmation?confirmation_token=#{}
 RESET_URL=http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/accounts/password_reset?reset_token=#{}
 
-SENDGRID_API_KEY=<%= @config['sendgrid_api_key'] %>
+SMTP_HOST=<%= @config['smtp']['host'] %>
+SMTP_PORT=<%= @config['smtp']['port'] %>
+SMTP_USER=<%= @config['smtp']['user'] %>
+SMTP_PASSWORD=<%= @config['smtp']['password'] %>
 
 JWT_PUBLIC_KEY=<%= @jwt_public_key %>
