Add correct vars to config/frontend

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -1,6 +1,8 @@
 window.env = {
     api: {
-      gatewayUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2',
+      authUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong',
+      tradeUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/peatio',
+      applogicUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic',
       rangerUrl: 'ws://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger',
     },
     minutesUntilAutoLogout: '5',
