--- a/templates/config/frontend/tower.js.erb
+++ b/templates/config/frontend/tower.js.erb
@@ -1,3 +1,3 @@
 window.env = {
-  API_URL: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>'
+  authUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong'
 };
