OPEX-503 [2Fa] Rename of project for 2fa application

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -35,3 +35,5 @@ EVENT_API_RABBITMQ_HOST=rabbitmq
 EVENT_API_RABBITMQ_PORT=5672
 EVENT_API_RABBITMQ_USERNAME=guest
 EVENT_API_RABBITMQ_PASSWORD=guest
+
+APP_NAME=<%= @config['app']['name'] %>
