Integrate Apache Superset into Compose

--- a/templates/compose/proxy.yaml.erb
+++ b/templates/compose/proxy.yaml.erb
@@ -16,6 +16,7 @@ services:
           - <%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
           - peatio.<%= @config['app']['domain'] %>
           - ws.ranger.<%= @config['app']['domain'] %>
+          - superset.<%= @config['app']['domain'] %>
           - eth.<%= @config['app']['domain'] %>
           - tower.<%= @config['app']['domain'] %>
           - monitor.<%= @config['app']['domain'] %>
