--- a/templates/config/frontend/tower.js.erb
+++ b/templates/config/frontend/tower.js.erb
@@ -1,3 +1,3 @@
 window.env = {
-  authUrl: 'http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong'
+  authUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong'
 };
