--- a/templates/config/postmaster.env.erb
+++ b/templates/config/postmaster.env.erb
@@ -6,8 +6,8 @@ RABBITMQ_PASSWORD=guest
 SENDER_NAME=<%= @config['smtp']['sender_name'] %>
 SENDER_EMAIL=<%= @config['smtp']['sender_email'] %>
 
-CONFIRM_URL=http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/accounts/confirmation?confirmation_token=#{}
-RESET_URL=http://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/accounts/password_reset?reset_token=#{}
+CONFIRM_URL=<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/accounts/confirmation?confirmation_token=#{}
+RESET_URL=<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/accounts/password_reset?reset_token=#{}
 
 SMTP_HOST=<%= @config['smtp']['host'] %>
 SMTP_PORT=<%= @config['smtp']['port'] %>
