--- a/templates/config/traefik.toml.erb
+++ b/templates/config/traefik.toml.erb
@@ -7,6 +7,8 @@ defaultEntryPoints = [<%= '"https",' if @config['ssl']['enabled'] %>"http"]
   [entryPoints.http]
   address = ":80"
 <% if @config['ssl']['enabled'] -%>
+    [entryPoints.http.redirect]
+    entryPoint = "https"
   [entryPoints.https]
   address = ":443"
   [entryPoints.https.tls]
