Fix: Add Barong domain env to Barong for latest postmaster support

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -37,3 +37,4 @@ EVENT_API_RABBITMQ_USERNAME=guest
 EVENT_API_RABBITMQ_PASSWORD=guest
 
 APP_NAME=<%= @config['app']['name'] %>
+BARONG_DOMAIN=<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
