--- a/templates/compose/arke.yaml.erb
+++ b/templates/compose/arke.yaml.erb
@@ -4,6 +4,6 @@ services:
   arke:
     image: "<%= @config['images']['arke'] %>"
     volumes:
-      - ../config/arke/strategy.yaml:/home/app/config/values.yaml
+      - ../config/arke:/home/app/config
     command: start
 
