--- a/templates/terraform/terraform.tfvars.erb
+++ b/templates/terraform/terraform.tfvars.erb
@@ -4,8 +4,8 @@ project = "<%= @config['terraform']['project'] %>"
 region = "<%= @config['terraform']['region'] %>"
 zone = "<%= @config['terraform']['zone'] %>"
 ssh_user = "app"
-ssh_public_key = "../config/secrets/kite.key.pub"
-ssh_private_key = "../config/secrets/kite.key"
+ssh_public_key = "../config/secrets/app.key.pub"
+ssh_private_key = "../config/secrets/app.key"
 instance_name = "<%= @config['terraform']['instance_name'] %>"
 machine_type = "<%= @config['terraform']['machine_type'] %>"
 image = "<%= @config['terraform']['image'] %>"
