--- a/templates/config/gateway/envoy.yaml.erb
+++ b/templates/config/gateway/envoy.yaml.erb
@@ -23,6 +23,11 @@ static_resources:
                   cluster: barong
                   prefix_rewrite: "/api/v2/"
               - match:
+                  prefix: "/api/v2/applogic"
+                route:
+                  cluster: applogic
+                  prefix_rewrite: "/api/v1/"
+              - match:
                   prefix: "/api/v2/peatio"
                 route:
                   cluster: peatio
@@ -87,6 +92,14 @@ static_resources:
     - socket_address:
         address: barong
         port_value: 8001
+  - name: applogic
+    connect_timeout: 0.25s
+    type: strict_dns
+    lb_policy: round_robin
+    hosts:
+    - socket_address:
+        address: applogic
+        port_value: 8081
   - name: peatio
     connect_timeout: 0.25s
     type: strict_dns
