--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -27,9 +27,9 @@ CURRENCIES_CONFIG=/opt/peatio/config/seed/currencies.yml
 MANAGEMENT_API_V1_CONFIG=/opt/peatio/config/management_api_v1.yml
 
 JWT_AUDIENCE=peatio,barong
-JWT_PUBLIC_KEY=<%= @jwt_public_key %>
+JWT_PUBLIC_KEY=<%= @barong_public_key %>
 
-EVENT_API_JWT_PRIVATE_KEY=<%= @jwt_private_key %>
+EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
 EVENT_API_JWT_ALGORITHM=RS256
 EVENT_API_RABBITMQ_HOST=rabbitmq
 EVENT_API_RABBITMQ_PORT=5672
