--- a/templates/config/postmaster.env.erb
+++ b/templates/config/postmaster.env.erb
@@ -14,4 +14,4 @@ SMTP_PORT=<%= @config['smtp']['port'] %>
 SMTP_USER=<%= @config['smtp']['user'] %>
 SMTP_PASSWORD=<%= @config['smtp']['password'] %>
 
-JWT_PUBLIC_KEY=<%= @jwt_public_key %>
+JWT_PUBLIC_KEY=<%= @barong_public_key %>
