--- a/templates/config/toolbox.yaml.erb
+++ b/templates/config/toolbox.yaml.erb
@@ -9,5 +9,5 @@ orders:  100
 traders: 10
 threads: 5
 management-api-v1-jwt-signer: toolbox
-api-v2-jwt-key: "<%= @jwt_private_key %>"
+api-v2-jwt-key: "<%= @barong_private_key %>"
 management-api-v1-jwt-key: "<%= @toolbox_jwt_private_key %>"
