--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -24,12 +24,12 @@ STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
 RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
 RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
 
-JWT_PUBLIC_KEY=<%= @jwt_public_key %>
+JWT_PUBLIC_KEY=<%= @barong_public_key %>
 JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 
 VAULT_ADDRESS=http://vault:8200
 
-EVENT_API_JWT_PRIVATE_KEY=<%= @jwt_private_key %>
+EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
 EVENT_API_JWT_ALGORITHM=RS256
 EVENT_API_RABBITMQ_HOST=rabbitmq
 EVENT_API_RABBITMQ_PORT=5672
