Fix: Update the Applogic env with correct DB configs

--- a/templates/config/applogic.env.erb
+++ b/templates/config/applogic.env.erb
@@ -7,7 +7,7 @@ PEATIO_URL=http://peatio:8000
 PORT=8081
 DATABASE_HOST=db
 DATABASE_USER=root
-DATABASE_PASS=changeme
+DATABASE_PASSWORD=changeme
 
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
 
