--- a/templates/compose/superset.yaml.erb
+++ b/templates/compose/superset.yaml.erb
@@ -2,11 +2,14 @@ version: '3.6'
 
 services:
   superset:
-    image: amancevice/superset:0.18.5
+    image: amancevice/superset:0.28.1
     restart: always
-    environment:
-      SQLALCHEMY_DATABASE_URI: "mysql://root:changeme@db:3306/superset"
+    volumes:
+      - superset_db:/var/lib/superset
     labels:
       traefik.enable: true
       traefik.frontend.rule: "Host:superset.<%= @config['app']['domain'] %>"
       traefik.port: 8088
+
+volumes:
+  superset_db:
