--- a/templates/config/applogic.env.erb
+++ b/templates/config/applogic.env.erb
@@ -11,4 +11,5 @@ DATABASE_PASSWORD=changeme
 
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
 
+RAILS_LOG_TO_STDOUT=true
 SECRET_KEY_BASE=b609ebad4856c8f8a4f465fa785c74fb
