Feature: integrate sidekiq for applogic (#53)

--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -82,3 +82,12 @@ services:
     env_file:
       - ../config/postmaster.env
 
+  sidekiq:
+    image: "<%= @config['images']['applogic'] %>"
+    env_file:
+      - ../config/applogic.env
+    volumes:
+      - ../config/applogic/management_api_v2.yml:/home/app/config/management_api_v2.yml
+      - ../config/applogic/schedule.yml:/home/app/config/schedule.yml
+    command: bash -c "sidekiq"
+
