--- a/templates/config/applogic.env.erb
+++ b/templates/config/applogic.env.erb
@@ -3,6 +3,7 @@ RAILS_ROOT=/home/app
 
 BARONG_URL=http://barong:8001
 PEATIO_URL=http://peatio:8000
+REDIS_URL=redis://redis:6379
 
 PORT=8081
 DATABASE_HOST=db
