--- a/templates/config/applogic.env.erb
+++ b/templates/config/applogic.env.erb
@@ -10,6 +10,18 @@ DATABASE_HOST=db
 DATABASE_USER=root
 DATABASE_PASSWORD=changeme
 
+EVENT_API_RABBITMQ_HOST=rabbitmq
+EVENT_API_RABBITMQ_PORT=5672
+EVENT_API_RABBITMQ_USERNAME=guest
+EVENT_API_RABBITMQ_PASSWORD=guest
+
+BARONG_EVENT_API_JWT_PUBLIC_KEY=<%= @barong_public_key %>
+BARONG_EVENT_API_JWT_ALGORITHM=RS256
+
+EVENT_API_APPLICATION=barong
+EVENT_API_EVENT_CATEGORY=model
+EVENT_API_EVENT_NAME=profile.created
+
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
 
 RAILS_LOG_TO_STDOUT=true
