--- a/templates/config/peatio/seed/currencies.yml.erb
+++ b/templates/config/peatio/seed/currencies.yml.erb
@@ -5,8 +5,8 @@
   precision:              2
   base_factor:            1
   enabled:                true
-  min_deposit_amount:     0
-  min_collection_amount:  0
+  min_deposit_amount:     0.01
+  min_collection_amount:  0.01
   withdraw_limit_24h:     100
   withdraw_limit_72h:     200
   deposit_fee:            0
@@ -16,13 +16,14 @@
 
 - id:                     fth
   name:                   Fiat Ethereum
-  symbol:                 'F'
+  symbol:                 '₪'
   type:                   fiat
   precision:              2
-  base_factor:            1
   enabled:                true
-  min_deposit_amount:     0
-  min_collection_amount:  0
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.01
+  min_collection_amount:  0.01
   withdraw_limit_24h:     100
   withdraw_limit_72h:     200
   deposit_fee:            0
@@ -66,8 +67,8 @@
   # Deposits with less amount are skipped during blockchain synchronization.
   # We advise to set value 10 times bigger than the network fee to prevent losses.
   # NOTE: Network fee is paid in ETH but min_deposit_amount is in TRST.
-  min_deposit_amount:     0.00021
-  min_collection_amount:  0.00021
+  min_deposit_amount:     2
+  min_collection_amount:  2
   withdraw_limit_24h:     300      #            (usually can be found on the official website).
   withdraw_limit_72h:     600
   deposit_fee:            0
