--- a/templates/config/peatio/seed/markets.yml.erb
+++ b/templates/config/peatio/seed/markets.yml.erb
@@ -1,41 +1,25 @@
-- id:             ethusd
-  ask_unit:       eth
-  bid_unit:       usd
-  ask_fee:        0.0015
-  bid_fee:        0.0015
-  min_ask_price:  0.0
-  max_bid_price:  0.0
-  min_ask_amount: 0.0
-  min_bid_amount: 0.0
-  ask_precision:  2
-  bid_precision:  2
-  position:       1
-  enabled:        true
+- id:                ethusd
+  base_unit:         eth
+  quote_unit:        usd
+  amount_precision:  5
+  price_precision:   2
+  ask_fee:           0.0015
+  bid_fee:           0.0015
+  min_price:         0.01
+  max_price:         1000.0
+  min_amount:        0.00001
+  position:          2
+  state:             enabled
 
-- id:             fthusd
-  ask_unit:       fth
-  bid_unit:       usd
-  ask_fee:        0.0015
-  bid_fee:        0.0015
-  min_ask_price:  0.0
-  max_bid_price:  0.0
-  min_ask_amount: 0.0
-  min_bid_amount: 0.0
-  ask_precision:  2
-  bid_precision:  2
-  position:       2
-  enabled:        true
-
-- id:             trsteth
-  ask_unit:       trst
-  bid_unit:       eth
-  ask_fee:        0.0015
-  bid_fee:        0.0015
-  min_ask_price:  0.0
-  max_bid_price:  0.0
-  min_ask_amount: 0.0
-  min_bid_amount: 0.0
-  ask_precision:  4
-  bid_precision:  4
-  position:       3
-  enabled:        true
+- id:                fthusd
+  base_unit:         fth
+  quote_unit:        usd
+  amount_precision:  2
+  price_precision:   2
+  ask_fee:           0.0015
+  bid_fee:           0.0015
+  min_price:         0.01
+  max_price:         1000.0
+  min_amount:        0.01
+  position:          1
+  state:             enabled
