Fix: Add Applogic private key to env file (#55)

--- a/templates/config/applogic.env.erb
+++ b/templates/config/applogic.env.erb
@@ -23,6 +23,7 @@ EVENT_API_EVENT_CATEGORY=model
 EVENT_API_EVENT_NAME=profile.created
 
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
+JWT_PRIVATE_KEY=<%= @applogic_private_key %>
 
 RAILS_LOG_TO_STDOUT=true
 SECRET_KEY_BASE=b609ebad4856c8f8a4f465fa785c74fb
