Update env.js for lite version of frontend

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -4,6 +4,7 @@ window.env = {
       tradeUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/peatio',
       applogicUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic',
       rangerUrl: '<%= ssl_helper('ws') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger',
+      tenkoUrl: '<%= @config['tenko']['url'] %>',
     },
     minutesUntilAutoLogout: '5',
     withCredentials: false,
@@ -11,4 +12,7 @@ window.env = {
         captchaType: '<%= @config['recaptcha']['type'] %>',
         siteKey: '<%= @config['recaptcha']['siteKey'] %>',
     },
+    rangerReconnectPeriod: '1',
+    msAlertDisplayTime: '5000',
+    licenseKey: '',
 };
