Enhancement: Add Openware license key config to app.yml

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -14,5 +14,5 @@ window.env = {
     },
     rangerReconnectPeriod: '1',
     msAlertDisplayTime: '5000',
-    licenseKey: '',
+    licenseKey: '<%= @config['tenko']['license_key'] %>',
 };
