Updating README with guidance

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -4,7 +4,7 @@ window.env = {
       tradeUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/peatio',
       applogicUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic',
       rangerUrl: '<%= ssl_helper('ws') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger',
-      tenkoUrl: '<%= @config['tenko']['url'] %>',
+      tenkoUrl: '<%= @config['license']['url'] %>',
     },
     minutesUntilAutoLogout: '5',
     withCredentials: false,
@@ -14,5 +14,5 @@ window.env = {
     },
     rangerReconnectPeriod: '1',
     msAlertDisplayTime: '5000',
-    licenseKey: '<%= @config['tenko']['license_key'] %>',
+    licenseKey: '<%= @config['license']['key'] %>',
 };
