--- a/templates/config/peatio/seed/blockchains.yml.erb
+++ b/templates/config/peatio/seed/blockchains.yml.erb
@@ -1,7 +1,7 @@
 - key:               eth-rinkeby
   name:              Ethereum Rinkeby
-  client:            geth                   # API client name.
-  server:            http://geth:8545       # Public Ethereum node endpoint. IMPORTANT: full syncmode.
+  client:            parity                   # API client name.
+  server:            http://parity:8545       # Public Ethereum node endpoint. IMPORTANT: full syncmode.
   height:            4000000                # Initial block number from which sync will be started.
   min_confirmations: 6                      # Minimal confirmations needed for withdraw and deposit confirmation.
   explorer:
@@ -11,8 +11,8 @@
 
 - key:               eth-mainet
   name:              Ethereum Mainet
-  client:            geth                   # API client name.
-  server:            http://geth:8545       # Public Ethereum node endpoint. IMPORTANT: full syncmode.
+  client:            parity                   # API client name.
+  server:            http://parity:8545       # Public Ethereum node endpoint. IMPORTANT: full syncmode.
   height:            7500000                # Initial block number from which sync will be started.
   min_confirmations: 6                      # Minimal confirmations needed for withdraw and deposit confirmation.
   explorer:
