--- a/templates/config/peatio/seed/wallets.yml.erb
+++ b/templates/config/peatio/seed/wallets.yml.erb
@@ -7,8 +7,8 @@
   nsig:             <%= wallet['nsig'] %>
   max_balance:      <%= wallet['max_balance'] %>
   status:           active
-  gateway:          geth
+  gateway:          parity
   settings:
-    uri:            http://geth:8545
+    uri:            http://parity:8545
     secret:         '<%= wallet['secret'] %>'
 <% end %>
