--- a/templates/compose/superset.yaml.erb
+++ b/templates/compose/superset.yaml.erb
@@ -2,7 +2,7 @@ version: '3.6'
 
 services:
   superset:
-    image: amancevice/superset:0.28.1
+    image: "<%= @utils['images']['superset'] %>"
     restart: always
     volumes:
       - superset_db:/var/lib/superset
