--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -81,6 +81,8 @@ services:
     image: "<%= @config['images']['postmaster'] %>"
     env_file:
       - ../config/postmaster.env
+    volumes:
+      -  ../config/postmaster.yml:/app/config/postmaster.yml
 
   sidekiq:
     image: "<%= @config['images']['applogic'] %>"
@@ -90,7 +92,7 @@ services:
       - ../config/applogic/management_api_v2.yml:/home/app/config/management_api_v2.yml
       - ../config/applogic/schedule.yml:/home/app/config/schedule.yml
     command: bash -c "sidekiq"
-  
+
   listener:
     image: "<%= @config['images']['applogic'] %>"
     env_file:
